objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>HYPERLINK( "/" &amp; Purchased_Item__r.Account.Id ,  Purchased_Item__r.Account.Name)</formula>
        <inlineHelpText>Auto-populated from the Purchased Item</inlineHelpText>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <inlineHelpText>Amount of invoice</inlineHelpText>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Comment__c</fullName>
        <label>Invoice Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Legacy_ID__c</fullName>
        <label>Invoice Legacy ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Qty__c</fullName>
        <inlineHelpText>Number of hours or units invoiced</inlineHelpText>
        <label>Invoice Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Opportunity__c</fullName>
        <description>HYPERLINK( "/" &amp;  Purchased_Item__r.Purchase_Oppty_ID__c  ,  Purchased_Item__r.Purchase_Opportunity__r.Name)</description>
        <formula>"Recreate this formula field per Help Bubble"</formula>
        <inlineHelpText>Auto-populated from the Purchased Item. Original IMX test formula: HYPERLINK( "/" &amp;  Purchased_Item__r.Purchase_Oppty_ID__c  ,  Purchased_Item__r.Purchase_Opportunity__r.Name)</inlineHelpText>
        <label>Purchase Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchased_Item__c</fullName>
        <label>Purchased Item</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Account__c</columns>
        <columns>Purchase_Opportunity__c</columns>
        <columns>Purchased_Item__c</columns>
        <columns>Amount__c</columns>
        <columns>Invoice_Comment__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Invoices</label>
    </listViews>
    <listViews>
        <fullName>Todays_Invoices</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Purchased_Item__c</columns>
        <columns>Amount__c</columns>
        <columns>Project__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today's Invoices</label>
    </listViews>
    <nameField>
        <label>Invoice #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>